@@ -1,3 +1,10 @@
+2021-07-14  Clément Chigot  <clement.chigot@atos.net>
+
+	* dwarf.h (struct dwarf_section): Add XCOFF name.
+	* dwarf.c (struct dwarf_section_display): Update.
+	* objdump.c (load_debug_section): Add XCOFF name handler.
+	(dump_dwarf_section): Likewise.
+
 2021-07-12  Nick Clifton  <nickc@redhat.com>
 
 	* po/fr.po: Updated French translation.
