@@ -1,3 +1,10 @@
+2021-07-14  Clément Chigot  <clement.chigot@atos.net>
+
+	* libxcoff.h (struct xcoff_dwsect_name): Add DWARF name.
+	* coff-rs6000.c (xcoff_dwsect_names): Update.
+	* coffcode.h (sec_to_styp_flags): Likewise.
+	(coff_new_section_hook): Likewise.
+
 2021-07-10  Alan Modra  <amodra@gmail.com>
 
 	* dwarf2.c (read_address): Remove accidental commit.
